{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 676,
  "lineage": "b0c2fd59-9088-e307-d03c-c5a2862d2914",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:internet-gateway/igw-0accdffc12bc4f54a",
            "id": "igw-0accdffc12bc4f54a",
            "owner_id": "400106822279",
            "tags": {
              "name": "assessment"
            },
            "tags_all": {
              "name": "assessment"
            },
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:400106822279:loadbalancer/app/main-lb-tf/ab6360e4745c71ff",
            "arn_suffix": "app/main-lb-tf/ab6360e4745c71ff",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-tf-1374902046.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:400106822279:loadbalancer/app/main-lb-tf/ab6360e4745c71ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0311e75e5d0c5d17b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cfbd264755e551ed"
              },
              {
                "subnet_id": "subnet-0f3bcfac539fa9abc"
              }
            ],
            "subnets": [
              "subnet-0cfbd264755e551ed",
              "subnet-0f3bcfac539fa9abc"
            ],
            "vpc_id": "vpc-0a4c6058b78abd59c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:400106822279:listener/app/main-lb-tf/ab6360e4745c71ff/8635177c86345f04",
            "certificate_arn": "arn:aws:acm:us-east-1:400106822279:certificate/d6c14d63-e35b-4cc2-aafe-3cf405fafd2b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:400106822279:targetgroup/tf-main-lb-tg/d913af51eb6bf590",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:400106822279:listener/app/main-lb-tf/ab6360e4745c71ff/8635177c86345f04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:400106822279:loadbalancer/app/main-lb-tf/ab6360e4745c71ff",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main_elb",
            "aws_lb_target_group.main",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names",
            "data.aws_route53_zone.main",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:400106822279:targetgroup/tf-main-lb-tg/d913af51eb6bf590",
            "arn_suffix": "targetgroup/tf-main-lb-tg/d913af51eb6bf590",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:400106822279:targetgroup/tf-main-lb-tg/d913af51eb6bf590",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-main-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:route-table/rtb-0c02edb84590c8150",
            "id": "rtb-0c02edb84590c8150",
            "owner_id": "400106822279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0accdffc12bc4f54a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027fc6d2a84da51ec",
            "route_table_id": "rtb-0c02edb84590c8150",
            "subnet_id": "subnet-0cfbd264755e551ed"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080200567dc59885",
            "route_table_id": "rtb-0c02edb84590c8150",
            "subnet_id": "subnet-0f3bcfac539fa9abc"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:security-group/sg-0311e75e5d0c5d17b",
            "description": "Allow HTTPS to the load balanacer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0311e75e5d0c5d17b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP FROM ANYWHERE",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "assessment-load-balancer",
            "name_prefix": "",
            "owner_id": "400106822279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "assessment-loadbalancer-my-sg"
            },
            "tags_all": {
              "Name": "assessment-loadbalancer-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:security-group/sg-0f201312efb93aa4d",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f201312efb93aa4d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Http from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0311e75e5d0c5d17b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "assessment-public",
            "name_prefix": "",
            "owner_id": "400106822279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "assessment-my-sg"
            },
            "tags_all": {
              "Name": "assessment-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:subnet/subnet-0cfbd264755e551ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfbd264755e551ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400106822279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "assessment-public0"
            },
            "tags_all": {
              "name": "assessment-public0"
            },
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:subnet/subnet-0f3bcfac539fa9abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3bcfac539fa9abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400106822279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "assessment-public1"
            },
            "tags_all": {
              "name": "assessment-public1"
            },
            "vpc_id": "vpc-0a4c6058b78abd59c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available-names"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400106822279:vpc/vpc-0a4c6058b78abd59c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090d3f734cf41bcca",
            "default_route_table_id": "rtb-09293347563bc2a01",
            "default_security_group_id": "sg-094c85aabd37920f3",
            "dhcp_options_id": "dopt-0ccf34703767df95e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4c6058b78abd59c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09293347563bc2a01",
            "owner_id": "400106822279",
            "tags": {
              "name": "assessment"
            },
            "tags_all": {
              "name": "assessment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}